--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h1>Hi Git</h1>
         <p>Not first repi</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, rerum.</p>
     </div>
 </body>
 </html>
